      it without reading the man page describing its behavior).  The old
      migrate behavior is now available under "conary sync --full".  
      "conary synchildren" has been renamed to "conary sync", and its behavior 
      has also been tweaked slightly as a result - the old behavior is 
      available as "conary sync --current". (CNY-477)

Changes in 1.0.20:
  o Build Changes:
    * "jvmdir", "javadir", "javadocdir", and "thisjavadocdir" have
       been added to the default set of macros.
    * A r.JavaDoc() build action has been added.  It funtions
      exactly like the "r.Doc()" build action, except it coppies into
      "%(thisjavadocdir)s".
    * When the r.addArchive() source action attempts to guess the main
      directory in which to build, it now recognizes when when sources
      have been added in an order that defeats its algorithm and provides
      a helpful error message. (CNY-557)

  o Client Changes:
    * A --tag-script parameter has been added to the rollback
      command. (CNY-519)

  o Bug Fixes:
    * A bug in clone behavior that caused Conary to try to clone
      excessive troves has been fixed.  If you were cloning uphill
      from branch /a/b to /a, and a buildreq was satisfied by a trove
      on /a//c, Conary would try to clone the buildreq to /a as well.
      (CNY-499)
    * A bug in the "r.Ant()" and "r.JavaCompile()" build actions which
      caused the CLASSPATH variable to get mangled has been fixed.
    * A bug in 'r.ClassPath()' that caused a traceback has been fixed.
    * A bug that caused the "change password" tab to be displayed when
      browsing the repository via the web as an anonymous user has
      been fixed.
    * The web service code no longer permits the anonymous user to
      view the "change password" (/conary/chPassForm) form.
    * The r.addPatch() source action no longer hangs when presented
      with large patches, which fixes a bug introduced in Conary
      1.0.19.

Changes in 1.0.19: